feat: add observability stack, profiles, MDC tracing, metrics